fix column spacing and display

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -116,6 +116,9 @@ header, .main-head {
 }
 /* large */ 
 @media only screen and (max-width: 900px) and (min-width: 701px)  {
+  .columns {
+    grid-column-gap: 2rem;
+  }
   .col-12-lg {
     grid-column: span 12;
   }
@@ -156,7 +159,7 @@ header, .main-head {
 /* medium */
 @media only screen and (max-width: 700px) and (min-width: 501px)  {
   .columns {
-    grid-column-gap: 2rem;
+    grid-column-gap: 1.5rem;
   }
   .col-12-md {
     grid-column: span 12;
@@ -198,7 +201,7 @@ header, .main-head {
 /* small */
 @media only screen and (max-width: 500px) and (min-width: 361px)  {
   .columns {
-    grid-column-gap: 1.5rem;
+    grid-column-gap: 1rem;
   }
   .col-12-sm {
     grid-column: span 12;
@@ -240,7 +243,7 @@ header, .main-head {
 /* x-small */
 @media only screen and (max-width: 360px) {
   .columns {
-    grid-column-gap: 1rem;
+    grid-column-gap: 0.75rem;
   }
   .col-12-xs {
     grid-column: span 12;
@@ -351,6 +354,18 @@ h4 {
   font-size: 14px;
   line-height: 1em;
 }
+@media (max-width: 500px) {
+  h1 {
+    font-size: 18px;
+  }
+  h2 {
+    font-size: 16px;
+  }
+  body {
+    font-size: 13px;
+  }
+}
+
 input[type=text]  { 
   background-color: #fff;
   border: 1px solid #444;
